--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "sum"
-version = "0.1.0"
-license = "Apache-2.0"
+version = "0.1.1"
+license = "MIT OR Apache-2.0"
 authors = ["Alec Mocatta <alec@mocatta.net>"]
 categories = ["data-structures"]
 keywords = ["data-structure","sum-type"]
@@ -10,11 +10,11 @@ General-purpose sum types.
 """
 repository = "https://github.com/alecmocatta/sum"
 homepage = "https://github.com/alecmocatta/sum"
-documentation = "https://docs.rs/sum/0.1.0"
+documentation = "https://docs.rs/sum/0.1.1"
 readme = "README.md"
 
 [badges]
-travis-ci = { repository = "alecmocatta/amadeus" }
+travis-ci = { repository = "alecmocatta/sum" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
