--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,7 +1,7 @@
 fn_args_density = "Compressed"
 hard_tabs = true
 imports_layout = "Horizontal"
-merge_imports = true
+merge_imports = false
 # reorder_impl_items = true # currently nondeterministic, breaks check
 use_field_init_shorthand = true
 use_try_shorthand = true
