--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/alecmocatta/sum"
 homepage = "https://github.com/alecmocatta/sum"
 documentation = "https://docs.rs/sum/0.1.3"
 readme = "README.md"
-edition = "2018"
+# edition = "2018"
 
 [badges]
 azure-devops = { project = "alecmocatta/sum", pipeline = "tests" }
