--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,11 @@ edition = "2018"
 azure-devops = { project = "alecmocatta/sum", pipeline = "tests" }
 maintenance = { status = "actively-developed" }
 
+[features]
+futures = ["futures-core"]
+
 [dependencies]
+futures-core = { version = "0.3", optional = true, default-features = false }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 
 [package.metadata.docs.rs]
