--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,10 @@ jobs:
   parameters:
     endpoint: alecmocatta
     default:
-      rust_toolchain: 1.33.0 stable beta nightly
+      rust_toolchain: 1.36.0 stable beta nightly
       rust_lint_toolchain: nightly-2020-07-04
       rust_flags: ''
+      rust_features_clippy: ';futures;serde;all'
       rust_features: ';all'
       rust_target_check: ''
       rust_target_build: ''
