--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,8 @@ jobs:
       rust_toolchain: 1.36.0 stable beta nightly
       rust_lint_toolchain: nightly-2020-07-04
       rust_flags: ''
-      rust_features_clippy: ';futures;serde;all'
-      rust_features: ';all'
+      rust_features_clippy: 'default;futures;serde;all'
+      rust_features: 'default;all'
       rust_target_check: ''
       rust_target_build: ''
       rust_target_run: ''
