--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ jobs:
       rust_lint_toolchain: nightly-2020-07-04
       rust_flags: ''
       rust_features_clippy: 'default;default futures;default serde;all'
-      rust_features: ';all'
+      rust_features: 'default;all'
       rust_target_check: ''
       rust_target_build: ''
       rust_target_run: ''
